--- a/features/common/sidebar-nav.html
+++ b/features/common/sidebar-nav.html
@@ -27,7 +27,7 @@
                     </li>
                 </ul>
             </li>
-            <li class="nav-item nav-dropdown" ng-class="{open: $state.includes('app.components')}">
+            <!-- <li class="nav-item nav-dropdown" ng-class="{open: $state.includes('app.components')}">
                 <a class="nav-link nav-dropdown-toggle" ng-class="{active: $state.includes('app.components')}" href="#"><i class="icon-puzzle"></i> Components</a>
                 <ul class="nav-dropdown-items">
                     <li class="nav-item">
@@ -87,7 +87,7 @@
                         <a class="nav-link" ui-sref-active="active" ui-sref="appSimple.500"><i class="icon-star"></i> Error 500</a>
                     </li>
                 </ul>
-            </li>
+            </li> -->
 
         </ul>
     </nav>
