Gives score in quiz, fixes to project tracker tasks

--- a/features/common/sidebar-nav.html
+++ b/features/common/sidebar-nav.html
@@ -5,25 +5,32 @@
                 NAVIGATION
             </li>
             <li class="nav-item">
-                <a class="nav-link" ui-sref-active="active" ui-sref="app.projects"><i class="fa fa-code"></i> Projects</a>
+                <a class="nav-link" ui-sref-active="active" ui-sref="app.projects">
+                    <i class="fa fa-server"></i> Projects</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" ui-sref-active="active" ui-sref="app.reports.roster"><i class="fa fa-anchor"></i> Roster</a>
+                <a class="nav-link" ui-sref-active="active" ui-sref="app.reports.roster">
+                    <i class="fa fa-users"></i> Roster</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="https://training.n57.net" target="_blank">
+                    <i class="fa fa-code"></i> Technical Training</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" ui-sref-active="active" ui-sref="app.quiz">
+                    <i class="fa fa-book"></i> Quiz Generator</a>
             </li>
             <li class="nav-item nav-dropdown">
-                <a class="nav-link nav-dropdown-toggle" href="#"><i class="fa fa-terminal"></i> Training</a>
+                <a class="nav-link nav-dropdown-toggle" href="#">
+                    <i class="fa fa-bookmark"></i> Links</a>
                 <ul class="nav-dropdown-items">
                     <li class="nav-item">
-                        <a class="nav-link" href="https://training.n57.net" target="_blank"><i class="fa fa-minus"></i> Technical Training</a>
+                        <a class="nav-link" href="http://www.navybmr.com/active-duty/ctn/" target="_blank">
+                            <i class="fa fa-minus"></i> AiR Bibs</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" ui-sref-active="active" ui-sref="app.quiz"><i class="fa fa-minus"></i> Quiz Platform</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="http://www.navybmr.com/active-duty/ctn/" target="_blank"><i class="fa fa-minus"></i> AiR Bibs</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="http://www.dcita.edu/" target="_blank"><i class="fa fa-minus"></i> DCITA</a>
+                        <a class="nav-link" href="http://www.dcita.edu/" target="_blank">
+                            <i class="fa fa-minus"></i> DCITA</a>
                     </li>
                 </ul>
             </li>
