--- a/features/projects/projectDetails.html
+++ b/features/projects/projectDetails.html
@@ -202,7 +202,14 @@
                 <button type='button' style="width:120px" class='btn btn-success' data-toggle="modal" data-target="#newTaskModal">Add Tasks</button>
             </div>
             <div class="col-lg-6" style="text-align:right;" align="right">
-                <button type='button' class='btn btn-danger' ng-click='delProject()'>Delete Project</button>
+                <button ng-show="!confirmDelProj" class="btn btn-danger" style="float:right" ng-click="confirmDelProj=true">Delete Project</button>
+                <div style="float:right" ng-show="confirmDelProj">
+                    <strong>
+                        <em>Are you sure you want to delete this project?&nbsp;</em>
+                    </strong>
+                    <button class="btn btn-danger" ng-click="delProject(); confirmDelProj=false">Yes</button>
+                    <button class="btn btn-success" ng-click="confirmDelProj=false">No</button>
+                </div>
             </div>
         </div>
     </div>
