--- a/features/accounts/register.html
+++ b/features/accounts/register.html
@@ -134,6 +134,12 @@
                             </div>
                         </div>
                         <div class="form-group">
+                            <label class="col-md-12 form-control-label" for="seaos">Soft EAOS</label>
+                            <div class="col-md-12">
+                                <input type="date" id="seaos" name="seaos" ng-model="registration.seaos" class="form-control" required>
+                            </div>
+                        </div>
+                        <div class="form-group">
                             <label class="col-md-12 form-control-label" for="prd">PRD</label>
                             <div class="col-md-12">
                                 <input type="date" id="prd" name="prd" ng-model="registration.prd" class="form-control" required>
