--- a/features/accounts/login.html
+++ b/features/accounts/login.html
@@ -7,18 +7,21 @@
                         <div class="card-block">
                             <h1>Login</h1>
                             <p class="text-muted">Sign In to your account</p>
-                            <div data-ng-hide="message == null" data-ng-class="(savedSuccessfully) ? 'alert alert-success' : 'alert alert-danger'">
+                            <div data-ng-hide="message == null" data-ng-class="(savedSuccessfully) ? 'alert alert-success alert-dismissable' : 'alert alert-danger alert-dismissable'">
+                                <a href="#" class="close" ng-click="message = null" aria-label="close" style="color:darkred">&times;</a>
                                 {{message}}
                             </div>
                             <form role="form">
                                 <div class="input-group mb-3">
-                                    <span class="input-group-addon"><i class="icon-user"></i>
-                                </span>
+                                    <span class="input-group-addon">
+                                        <i class="icon-user"></i>
+                                    </span>
                                     <input type="text" class="form-control" placeholder="Username" data-ng-model="loginData.userName" required autofocus>
                                 </div>
                                 <div class="input-group mb-4">
-                                    <span class="input-group-addon"><i class="icon-lock"></i>
-                                </span>
+                                    <span class="input-group-addon">
+                                        <i class="icon-lock"></i>
+                                    </span>
                                     <input type="password" class="form-control" placeholder="Password" data-ng-model="loginData.password" required>
                                 </div>
                                 <div class="row">
@@ -36,7 +39,9 @@
                         <div class="card-block text-center">
                             <div>
                                 <h2>Sign up</h2>
-                                <p><br>New to N57?<br>Create an account to access more features of your divisional portal.</p>
+                                <p>
+                                    <br>New to N57?
+                                    <br>Create an account to access more features of your divisional portal.</p>
                                 <a class="btn btn-primary active mt-3" ui-sref="app.register">Register Now!</a>
                             </div>
                         </div>
