Tried progress bars.

--- a/features/dashboard/charts/trackerChart.html
+++ b/features/dashboard/charts/trackerChart.html
@@ -1,1 +1,14 @@
-<canvas class="chart chart-line" chart-data="vm.completionPcts" chart-labels="vm.users" chart-legend="false" height="300"></canvas>
+<!-- <canvas class="chart chart-line" chart-data="vm.completionPcts" chart-labels="vm.users" chart-legend="false" height="300"></canvas> -->
+
+<!-- TRIED HAND AT PROGRESS BARS... DOESN'T LOOK SO GOOD -->
+<!-- <li ng-repeat="user in vm.users">
+    <div class="title">
+        {{ user }}
+    </div>
+    <div class="bars">
+        <div class="progress progress-lg">
+            <div class="progress-bar bg-info" role="progressbar" style="width: {{ vm.completionPcts[$index] }}%" aria-valuenow="{{ vm.completionPcts[$index] }}"
+                aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+    </div>
+</li> -->
